--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "cross-env": "^6.0.3",
     "express": "^4.17.1",
